--- a/faceted/index.html
+++ b/faceted/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Crystal Orb</title>
+    <title>Interactive Crystal Orb</title>
     <style>
         body { margin: 0; overflow: hidden; }
         canvas { display: block; }
