fix(config): update minimal mistakes skin to 'air' for improved theme consistency
style(index): change header overlay color for better visual contrast

--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 layout: home
 author_profile: true
 header:
-  overlay_color: "#667eea"
+  overlay_color: "#2c3e50"
   overlay_filter: "0.5"
-  overlay_image: /assets/images/header-bg.jpg
   actions:
     - label: "View All Posts"
       url: "/blog/"
