feat: update layout configurations and add deployment guide for improved site management

--- a/projects/threejs-cube/index.html
+++ b/projects/threejs-cube/index.html
@@ -1,5 +1,7 @@
 ---
-layout: page
+layout: single
+title: "Three.js Interactive Cube"
+---layout: page
 title: Three.js Interactive Cube
 ---
 <div class="project-description">
